doing first publisher/consumer communication to save StudentCertificateEvent

--- a/api/certificate/src/main/resources/application.properties
+++ b/api/certificate/src/main/resources/application.properties
@@ -18,5 +18,7 @@ spring.rabbitmq.username=julioperezdev
 spring.rabbitmq.password=openSourcePassword
 
 julioperezdev.queue.name=helpRequest
+julioperezdev.exchange.name=exchangeHelpRequest
+julioperezdev.routing.key=message routing key
 
 
