--- a/api/certificate/pom.xml
+++ b/api/certificate/pom.xml
@@ -19,7 +19,11 @@
         <mockito.version>4.8.0</mockito.version>
     </properties>
     <dependencies>
-
+        <dependency>
+            <groupId>org.apache.pdfbox</groupId>
+            <artifactId>pdfbox</artifactId>
+            <version>2.0.22</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-amqp</artifactId>
